openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-beertime
spec:
  selector:
    app: nginx-beertime
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
