openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-beertime-route
spec:
  host: isbeertime.apps.sandbox-m3.1530.p1.openshiftapps.com
  to:
    kind: Service
    name: nginx-beertime
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
